First release! Added newsfeed, post and photos, as well as favicon.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,21 @@
 <!-- ./index.html -->
 <!DOCTYPE html>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+<!-- React -->
+<script src="https://fb.me/react-15.3.0.min.js"></script>
+<script src="https://fb.me/react-dom-15.3.0.min.js"></script>
+<!-- Firebase -->
+<script src="https://www.gstatic.com/firebasejs/3.3.0/firebase.js"></script>
+
 <html>
 <head>
     <meta charset="utf-8">
+    <link rel="shortcut icon" href="favicon.ico">
     <title>chongcher</title>
+    <style>
+        div[id='root'] > div.row { margin: 0; height: 100vh !important }
+        .carousel-control { display: flex !important; flex-direction: column !important; justify-content: center !important; color: transparent; background-image: none !important; }
+    </style>
 </head>
 <body>
 <div id="root"></div>
